Fix spacing on performance page

--- a/WebApplication1/Content/Site.css
+++ b/WebApplication1/Content/Site.css
@@ -176,4 +176,5 @@ h3 {
 }
 .performance_graphs p {
     color: #737572;
+    font-size:.85em;
 }
